# docs_assistant

./: .env.example  .gitignore  Dockerfile  README.MD  pyproject.toml
app/: config.py  main.py
app/api/api_v1/: api.py
app/api/api_v1/endpoints/: assistant.py
app/errors/: app_errors.py
app/services/: assistant.py  base.py  prompts.py
