[tool.poetry]
name = "docs_assistant"
version = "0.1.0"
description = ""
authors = ["Vlad <vladislav.sytyuk@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9.10"
black = "^23.7.0"
python-multipart = "^0.0.9"
langchain = "^0.1.13"
langchain-community = "^0.0.29"
langchainhub = "^0.1.15"
langchain-openai = "^0.1.0"
chromadb = "^0.4.24"
bs4 = "^0.0.2"
fastapi = "^0.110.0"
uvicorn = "^0.29.0"
pypdfium2 = "^4.28.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
